--- a/public/views/Users/index.ejs
+++ b/public/views/Users/index.ejs
@@ -21,15 +21,19 @@
           <thead>
             <tr>
               <th>Nombre</th>
+              <th>UserName</th>
               <th>Correo</th>
+              <th>Password</th>
               <th>Acciones</th>
             </tr>
           </thead>
           <tbody>
             <% users.forEach(function(user) { %>
               <tr>
-                <td><%= user.firstName %></td>
+                <td><%= user.fullName %></td>
+                <td><%= user.userName %></td>
                 <td><%= user.email %></td>
+                <td><%= user.password %></td>
                 <td>
                   <a href="/users/edit/<%= user.id %>" class="btn btn-primary">Editar</a>
                   <a href="/users/delete/<%= user.id %>" class="btn btn-danger">Eliminar</a>
