--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -8,13 +8,14 @@
 </head>
 <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs='sourceType: webcam;'>
-        <% markersAndModels.forEach(function(item) { %>
-            <a-marker preset="<%= item.marker.preset %>"
-                      type='pattern'
-                      url="<%= item.marker.patt %>"
-                      position="<%= item.marker.position %>"
-                      scale="<%= item.marker.scale %>"
-                      rotation="<%= item.marker.rotation %>">
+        <% markersAndModels.forEach((item, index) => { %>
+            <a-marker id="marker-<%= index %>"
+                    preset="<%= item.marker.preset %>"
+                    type="pattern"
+                    url="<%= item.marker.patt %>"
+                    position="<%= item.marker.position %>"
+                    scale="<%= item.marker.scale %>"
+                    rotation="<%= item.marker.rotation %>">
                 <a-entity gltf-model="<%= item.model.src %>"
                           position="<%= item.model.position %>"
                           scale="<%= item.model.scale %>"
@@ -25,5 +26,27 @@
         <% }); %>
         <a-entity camera></a-entity>
     </a-scene>
+
+    <script>
+        <% markersAndModels.forEach((item, index) => { %>
+          // Nombre unico de variable, evita falla en runtime
+          const marker<%= index %> = document.querySelector('#marker-<%= index %>');
+          
+          if (marker<%= index %>) {
+            // Marcador Encontrado
+            marker<%= index %>.addEventListener('markerFound', function() {
+              console.log('Marker #<%= index %> encontrado!');
+              window.open('https://www.google.com', '_blank'); // Open a new tab
+            });
+    
+            // Marcador perdido (despues de encontrarlo)
+            marker<%= index %>.addEventListener('markerLost', function() {
+              console.log('Marker #<%= index %> perdido!');
+            });
+          } else {
+            console.error(`Marker not found: #marker-<%= index %>`);
+          }
+        <% }); %>
+    </script>
 </body>
 </html>
