--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -8,7 +8,7 @@
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
   </head>
   <body style="margin: 0px; overflow: hidden">
-    <a-scene embedded arjs="trackingMethod: best">
+    <a-scene embedded arjs="sourceType: webcam;">
       <% markersAndModels.forEach((item, index) => { %>
       <a-marker
         id="marker-<%= index %>"
@@ -37,7 +37,7 @@
         </a-entity>
       </a-marker>
       <% }); %>
-      <a-entity camera look-controls></a-entity>
+      <a-entity camera ></a-entity>
     </a-scene>
 
     <script>
