--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,21 @@ body {
 .alert {
   width: max-content;
   position: fixed;
-  z-index: 4;
+  z-index: 5;
   top: 5%;
   right: 3%;
   animation: fadeOut 3s forwards;
   animation-delay: 3s;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
 }
 
 a {
@@ -25,13 +35,7 @@ p {
   color: #ECE9DD;
 }
 
-.card {
-  background-color: #fff;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  width: 700px;
-  max-width: 1000px;
-}
+
 
 .formato-general {
   height: 100vh;
