--- a/public/partials/navigation.ejs
+++ b/public/partials/navigation.ejs
@@ -398,7 +398,7 @@ body {
 
     </style>
 <nav class="nav">
-  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr; background-color: #00fffc;">
+  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr;">
     <div class="logo">
       <a href="/"><%= title %></a>
     </div>
@@ -406,6 +406,9 @@ body {
       <ul class="navlinks">
         <li><a href="/about"><i class="fas fa-info"></i> About</a></li>
         <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
+        <% if (current_user) { %>
+            <li><a href="/users"><i class="fas fa-sign-in-alt"></i> Admin</a></li>
+        <% } %>
         <% if (current_user) { %>
             <li><a href="/" onclick="cerrarSesion()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         <% }else{ %>
