--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -15,12 +15,8 @@
 
     <header class="container vh-100 d-flex justify-content-center align-items-center">
       <div class="d-flex flex-column justify-content-center align-items-center">
-        <img
-          src="../images/th1.jpeg"
-          class="w-50 m-auto animated bounceIn"
-          alt="Website Logo" />
         <h1 class="display-1 my-5 fw-bold">Exgen Station</h1>
-        <a href="/arcam" class="btn btn-primary w-25">Comenzar a jugar</a>
+        <a href="/arcam" class="button-play">Comenzar a jugar</a>
       </div>
     </header>
 
@@ -45,3 +41,9 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
+<style>
+  .button-play{
+    color: #ECE9DD;
+  }
+</style>
