--- a/public/partials/sidebar.ejs
+++ b/public/partials/sidebar.ejs
@@ -36,9 +36,9 @@
           </li>
 
           <li class="">
-            <a href="/users">
+            <a href="/markers">
               <i class='bx bx-bar-chart-alt-2 icon'></i>
-              <span class="text nav-text">Revenue</span>
+              <span class="text nav-text">Markers</span>
             </a>
           </li>
 
