--- a/public/partials/sidebar.ejs
+++ b/public/partials/sidebar.ejs
@@ -50,6 +50,13 @@
             </a>
           </li>
 
+          <li class="" style="display: grid; place-items: center;">
+            <a href="/recompensas" style="display: grid; grid-template-columns: 43px 1fr; padding-left: 18px;">
+              <i class='fas fa-award'></i>
+              <span class="text nav-text">Recompensas</span>
+            </a>
+          </li>
+
         </ul>
       </div>
 
