--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -10,35 +10,35 @@
     <link rel="stylesheet" href="../stylesheets/arScreen.css" />
   </head>
   <body style="margin: 0px; overflow: hidden">
-    <a-scene embedded arjs="sourceType: webcam;">
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
       <% markersAndModels.forEach(function(marker) { %>
-        <a-marker
-          id="marker-<%= marker.id %>"
-          preset="<%= marker.preset %>"
-          type="pattern"
-          url="<%= marker.patt %>"
-          position="<%= marker.marker_position %>"
-          scale="<%= marker.marker_scale %>"
-          rotation="<%= marker.marker_rotation %>"
+      <a-marker
+        id="marker-<%= marker.id %>"
+        preset="custom"
+        type="pattern"
+        url="<%= marker.patt %>"
+        position="<%= marker.marker_position %>"
+        scale="<%= marker.marker_scale %>"
+        rotation="<%= marker.marker_rotation %>"
+      >
+        <a-text
+          id="text-<%= marker.id %>"
+          value="<%= marker.text_data %>"
+          color="<%= marker.text_color %>"
+          position="<%= marker.text_position %>"
+          rotation="<%= marker.text_rotation %>"
+          scale="<%= marker.text_scale %>"
         >
-          <a-text
-            id="text-<%= marker.id %>"
-            value="<%= marker.text_data %>"
-            color="<%= marker.text_color %>"
-            position="<%= marker.text_position %>"
-            rotation="<%= marker.text_rotation %>"
-            scale="<%= marker.text_scale %>"
-          >
-          </a-text>
-          <a-entity
-            gltf-model="<%= marker.src %>"
-            position="<%= marker.model_position %>"
-            scale="<%= marker.model_scale %>"
-            rotation="<%= marker.model_rotation %>"
-            animation-mixer="<%= marker.anim_conf %>"
-          >
-          </a-entity>
-        </a-marker>
+        </a-text>
+        <a-entity
+          gltf-model="<%= marker.src %>"
+          position="<%= marker.model_position %>"
+          scale="<%= marker.model_scale %>"
+          rotation="<%= marker.model_rotation %>"
+          animation-mixer="<%= marker.anim_conf %>"
+        >
+        </a-entity>
+      </a-marker>
       <% }); %>
       <a-entity camera> </a-entity>
     </a-scene>
@@ -56,6 +56,9 @@
     <script>
       // Numero de marcadores necesarios a escanear
       const totalMarkers = <%= markersAndModels.length %>;
+      console.log("Iniciando AR")
+      const markersAndModels = <%- JSON.stringify(markersAndModels) %>;
+      console.log(markersAndModels);
 
       // TODO: obtener los marcadores escaneados de la base de datos
       const detectedMarkers = new Set();
@@ -71,7 +74,7 @@
         audio.loop=loop;
         audio.play();
       }
-      
+
 
       function updateProgress(value) {
         var starPosition = (100 / <%= markersAndModels.length %>) * value;
