Agregado control de cámara
Look controls en ar.ejs

--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -31,6 +31,7 @@
         >
         </a-text>
         <a-entity
+          look-controls
           gltf-model="<%= marker.src %>"
           position="<%= marker.model_position %>"
           scale="<%= marker.model_scale %>"
