rotacion para escritorio
Control de rotacion de modelos para escrirotio

--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -39,6 +39,7 @@
           rotation="<%= marker.model_rotation %>"
           animation-mixer="<%= marker.anim_conf %>"
           gesture-handler
+          look-controls
         >
         </a-entity>
       </a-marker>
